few adjustment and adding social media div

--- a/footer.html
+++ b/footer.html
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                         <div class="footer-social-media">
-                            <p class="text-[#313131] font-semibold">Social Media</p>
+                            <p class="text-[#313131] text-blue-700 font-bold">Social Media</p>
                             <ul class="flex flex-col my-5 justify-start items-left mt-4">
                               <li class="mr-4 w-full h-[22px] my-1">
                                 <a href="https://www.facebook.com" class="hover:text-[#d86943] text-[#313131] dark:text-white" aria-label="Facebook page">
